Performance improvements.